kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.name}-service-v${version.major}
  namespace: default
spec:
  selector:
    app: ${project.name}
    version: v${version.major}
  ports:
    - protocol: TCP
      name: http-port
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: management-port
      port: 8081
  type: ClusterIP
