kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${project.name}-ingress-v${version.major}
  namespace: default
  annotations:
    allow.http: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.projectsysvictor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ${project.name}-service-v${version.major}
              servicePort: http-port
